2013-06-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el (eww-convert-widgets): Make widgets from non-tabular layouts
	work, too.

2013-06-10  Albert Krewinkel  <krewinkel@moltkeplatz.de>

	* sieve-manage.el (sieve-manage-open): work with STARTTLS: shorten
	stream managing functions by using open-protocol-stream to do most of
	the work. Has the nice benefit of enabling STARTTLS.
	Wait for capabilities after STARTTLS: following RFC5804, the server
	sends new capabilities after successfully establishing a TLS connection
	with the client. The client should update the cached list of
	capabilities, but we just ignore the answer for now.
	(sieve-manage-network-p, sieve-manage-network-open)
	(sieve-manage-starttls-p, sieve-manage-starttls-open)
	(sieve-manage-forward, sieve-manage-streams)
	(sieve-manage-stream-alist): Remove unneeded functions neither in the
	API, nor called by any other function.
	Enable Multibyte for SieveManage buffers: The parser won't properly
	handle umlauts and line endings unless multibyte is turned on in the
	process buffer.

2013-06-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el (eww-tag-input): Support password fields.
	(eww-submit): Support POST.

2013-06-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el (eww-tag-form): Protect against degenerate forms.

	* shr.el (shr-expand-url): Expand URLs that start with a slash
	correctly.

	* eww.el (eww-submit): Get submit button logic right.

	* shr.el (shr-final-table-render): New variable to signal when we're
	doing the final table rendering so that we can collect more data at
	that point.

	* eww.el (eww-submit): Make form submission work.
	(eww-tag-input): Implement submit buttons.
	(eww-click-radio): Implement radio and checkboxes.
	(eww-submit): Handle hidden elements.

	* shr.el (shr-descend): Allow other packages to override (or provide)
	rendering of elements.
	(shr-expand-url): Strip query strings from URLs before expanding them.

	* eww.el: Don't require cl-lib.